--- a/css/styles.css
+++ b/css/styles.css
@@ -3716,7 +3716,7 @@ p, li, a {
   color: #155724;
 }
 
-.svc-chip--setup {
+.svc-chip--setup, .svc-chip--works-caveat {
   background: #fff3cd;
   color: #856404;
 }
